<resources>
    <string name="app_name" translatable="false">WOA Helper</string>
    <string name="app_subtitle" translatable="false">v1.8.4"</string>
    <string name="creator" translatable="false">Victoria Freeman, the sog, remtrik, Marius586, halal-beef &amp; KuatoDev ©️2025</string>
    <string name="android" translatable="false">Android</string>
    <string name="windows" translatable="false">Windows</string>
    <string name="revios" translatable="false">ReviOS</string>
    <string name="atlasos" translatable="false">AtlasOS</string>
    <string name="error_title">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="backup_boot_title">BACK UP BOOT IMAGE</string>
    <string name="mnt_title">%s WINDOWS</string>
    <string name="toolbox_title">WOA TOOLBOX</string>
    <string name="dump_modem_title">DUMP MODEM</string>
    <string name="flash_uefi_title">FLASH UEFI</string>
    <string name="uefi_not_found">UEFI NOT FOUND</string>
    <string name="quickboot_title">QUICKBOOT TO WINDOWS</string>
    <string name="sta_title">STA CREATOR</string>
    <string name="usbhost_title">USB HOST MODE TOGGLE</string>
    <string name="software_title">ARM SOFTWARE</string>
    <string name="rotation_title">ROTATION TOGGLE</string>
    <string name="autoflash_title">ANDROID BOOT.IMG AUTO-FLASHER</string>
    <string name="atlasos_title">COPY ATLASOS / REVIOS FILES</string>
    <string name="defender_title">EDGE / DEFENDER REMOVER</string>
    <string name="script_title">SCRIPT TOOLBOX</string>
    <string name="setup_title">FRAMEWORK INSTALLERS</string>
    <string name="dbkp_title">DUALBOOT KERNEL PATCHER</string>
    <string name="tablet_title">TABLET MODE TOGGLE</string>
    <string name="devcfg_title">DEVCFG FLASHER</string>
    <string name="backup_boot_subtitle">Back up boot image to Android and/or Windows</string>
    <string name="mnt_subtitle">Toggle mounting Windows partition in order to view or edit content inside</string>
    <string name="toolbox_subtitle">Tools and scripts for a more enjoyable Windows experience</string>
    <string name="dump_modem_subtitle">Dump modem to Windows to fix LTE on SIM1 in Windows.\nRequired before every Windows boot</string>
    <string name="flash_uefi_subtitle">Flash UEFI to boot partition</string>
    <string name="uefi_not_found_subtitle">Please download the UEFI image for %s and place it in the UEFI FOLDER in INTERNAL STORAGE (/sdcard/UEFI)</string>
    <string name="quickboot_subtitle">Dump modem, flash UEFI, and reboot to Windows in one click</string>
    <string name="quickboot_subtitle_nabu">Flash UEFI and reboot to Windows in one click</string>
    <string name="sta_subtitle">Adds the Switch to Android app to Windows</string>
    <string name="usbhost_subtitle">Adds a tool to C:\\Toolbox which allows you to toggle USB Host Mode</string>
    <string name="software_subtitle">Adds browser shortcuts containing ARM software to C:\\Toolbox</string>
    <string name="rotation_subtitle">Adds a tool to C:\\Toolbox that lets you rotate the screen with a shortcut\n(useful for devices without working sensors)</string>
    <string name="autoflash_subtitle">Adds a tool to Windows that lets you automatically flash boot.img (whenever Windows boots \/ when the battery is low).</string>
    <string name="atlasos_subtitle">Copies the AtlasOS or ReviOS playbook and AME Wizard to C:\\Toolbox</string>
    <string name="defender_subtitle">Adds a script to C:\\Toolbox which allows you to remove Microsoft Edge \/ Windows Defender</string>
    <string name="script_subtitle">Tools and scripts for a more enjoyable Windows experience</string>
    <string name="setup_subtitle">Adds installers for several frameworks into C:\\Toolbox</string>
    <string name="dbkp_subtitle">Patches the kernel for seamless dualbooting</string>
    <string name="tablet_subtitle">Adds a tool to C:\\Toolbox which allows you to toggle tablet mode</string>
    <string name="devcfg_subtitle">Flashes OOS11 devcfg so that Windows can boot on OOS12 devices</string>
    <string name="backup_boot_question">Back up current Android boot image?</string>
    <string name="mount_question">Mount Windows to %s?</string>
    <string name="unmount_question">Unmount Windows?</string>
    <string name="dump_modem_question">Dump modem1st and modem2st to Windows partition?</string>
    <string name="flash_uefi_question">Flash UEFI? \nIf so, the next boot will be in Windows</string>
    <string name="quickboot_question">Quickboot to Windows?</string>
    <string name="sta_question">Create Switch to Android app in C:\\sta?</string>
    <string name="usbhost_question">Copy USB Host Mode Control tool to C:\\Toolbox?</string>
    <string name="software_question">Copy browser shortcuts to C:\⧹Toolbox?</string>
    <string name="rotation_question">Copy QuickRotate tool to C:\⧹Toolbox?</string>
    <string name="autoflash_question">Copy boot.img auto-flasher tool to C:\\Toolbox?</string>
    <string name="atlasos_question">Download and move AtlasOS or ReviOS playbook to C:\\Toolbox?</string>
    <string name="defender_question">Copy Edge \/ Defender remover scripts to C:\\Toolbox?</string>
    <string name="setup_question">Download and move C++ Redistributables, DirectX, OpenGL, OpenAL, PhysX, and XNA framework installers to C:\\Toolbox?\n(this may take some time)</string>
    <string name="dbkp_question">Patch and flash your current kernel?\n!!!DO NOT PRESS YES UNLESS YOUR DEVICE IS %s!!!</string>
    <string name="tablet_question">Copy OptimizedTaskbarControl tool to C:\\Toolbox?</string>
    <string name="devcfg_question">Flash OOS11 devcfg?\n!!!DO NOT PRESS YES UNLESS YOUR DEVICE IS %s!!!</string>
    <string name="wrong">Something went wrong</string>
    <string name="mountfail">Something went wrong, \nWindows could not be mounted.\nRequest help in the Telegram chat.</string>
    <string name="ntfs">NTFS support not detected. \nInstall NTFS3G module?</string>
    <string name="internet">No internet connection found.\nConnect to the internet and try again.</string>
    <string name="partition">No Windows partition detected.</string>
    <string name="internalstorage">Files downloaded in internal storage</string>
    <string name="dbkp">Boot image has been patched and flashed.\nPatched image can also be found at /sdcard/WOAHelper/Backups.\nUse your %s to switch between Windows and Android.</string>
    <string name="devcfg">OOS11 devcfg has been flashed.\nOriginal devcfg can be found at /sdcard/WOAHelper/Backups.\nUse sdd.exe in STA Creator to flash OOS12 devcfg when returning to Android</string>
    <string name="op7">alert slider</string>
    <string name="cepheus">assistant button</string>
    <string name="nabu">magnetic case</string>
    <string name="nabu2">volume buttons</string>
    <string name="reboot">Reboot</string>
    <string name="cancel">Cancel</string>
    <string name="mounted">Windows mounted</string>
    <string name="unmounted">Windows unmounted</string>
    <string name="rebootr">Reboot required</string>
    <string name="lte">Enjoy LTE in Windows</string>
    <string name="flash">UEFI flashed successfully.\nNext boot will boot into Windows. </string>
    <string name="backuped">Boot image backed up successfully\n</string>
    <string name="preferences">Preferences</string>
    <string name="bwarn">!!WARNING!!\n UFS may be worn down by this, enable only if you receive a lot of OTA updates</string>
    <string name="agree">Agree</string>
    <string name="nonroot">Root not detected</string>
    <string name="unsupported">!!WARNING!!\nDevice unsupported\nUse this app at your own risk</string>
    <string name="sure">OK, just let me use the app</string>
    <string name="upanel">Your panel has not been confirmed to work, please share your Windows experience in the Telegram chat</string>
    <string name="chat">Chat</string>
    <string name="nah">Nah</string>
    <string name="later">Later</string>
    <string name="done">Done!</string>
    <string name="mountt">MOUNT</string>
    <string name="unmountt">UNMOUNT</string>
    <string name="update">UPDATE</string>
    <string name="update1">Update available</string>
    <string name="update2">Updating…</string>
    <string name="qspressagain">Press again</string>
    <string name="qsinternet">Internet required</string>
    <string name="last">LAST BACKUP : %s</string>
    <string name="slot">SLOT : %s</string>
    <string name="ramvalue">MEMORY : %.2fGB </string>
    <string name="paneltype">PANEL : %s</string>
    <string name="guide">GUIDE</string>
    <string name="group">GROUP</string>
    <string name="not_found">Not Found</string>
    <string name="yes">YES</string>
    <string name="dismiss">DISMISS</string>
    <string name="no">NO</string>
    <string name="please_wait">Please wait…</string>
    <string name="preference1">Force backup boot.img when quickboot (Windows)</string>
    <string name="preference2">Force backup boot.img when quickboot (Android)</string>
    <string name="preference3">Back up boot.img if none is detected (Windows)</string>
    <string name="preference4">Back up boot.img if none is detected (Android)</string>
    <string name="preference5">Require confirmation for QS quickboot tile</string>
    <string name="preference6">Select language</string>
    <string name="preference7">Automatically mount Windows on device start</string>
    <string name="preference8">Disable modem dump functionality</string>
    <string name="preference9">Require unlocked screen for quickboot</string>
    <string name="preference10">Mount Windows to /mnt instead of /sdcard</string>
    <string name="preference11">Disable checking for app updates</string>
    <string name="preference12">Flash OOS11 devcfg when quickbooting</string>
    <string name="preference13">Check for required files when flashing devcfg</string>
    <string name="uefiChk" translatable="false">su -c find /mnt/sdcard/UEFI/ -type f  | grep ".img" | head -n 1 </string>
    <string name="default1">Default</string>
    <string name="backup" translatable="false">dd bs=8M if=/dev/block/by-name/boot$(getprop ro.boot.slot_suffix) of=/sdcard/boot.img</string>
    <string name="ntfsChk" translatable="false">su -c find /system/bin -name mount.ntfs</string>
    <string name="backup1" translatable="false">dd bs=8M if=/dev/block/by-name/boot$(getprop ro.boot.slot_suffix) of=/mnt/sdcard/Windows/boot.img</string>
    <string name="backup2" translatable="false">dd bs=8M if=/dev/block/by-name/boot$(getprop ro.boot.slot_suffix) of=/mnt/Windows/boot.img</string>
    <string name="mount" translatable="false"> mount -t ntfs %s /mnt/sdcard/Windows</string>
    <string name="unmount" translatable="false">su -mm -c umount /mnt/sdcard/Windows </string>
    <string name="rm" translatable="false">rmdir /mnt/sdcard/Windows</string>
    <string name="mk" translatable="false">mkdir /mnt/sdcard/Windows || true</string>
    <string name="mount2" translatable="false"> mount -t ntfs %s /mnt/Windows</string>
    <string name="unmount2" translatable="false">su -mm -c umount /mnt/Windows </string>
    <string name="rm2" translatable="false">rmdir /mnt/Windows</string>
    <string name="mk2" translatable="false">mkdir /mnt/Windows || true</string>
    <string name="modem1" translatable="false">su -c dd bs=8M if=/dev/block/by-name/modemst1 of=$(find /mnt/sdcard/Windows/Windows/System32/DriverStore/FileRepository -name qcremotefs8150.inf_arm64_*)/bootmodem_fs1 bs=8388608</string>
    <string name="modem2" translatable="false">su -c dd bs=8M if=/dev/block/by-name/modemst2 of=$(find /mnt/sdcard/Windows/Windows/System32/DriverStore/FileRepository -name qcremotefs8150.inf_arm64_*)/bootmodem_fs2 bs=8388608</string>
    <string name="modem12" translatable="false">su -c dd bs=8M if=/dev/block/by-name/modemst1 of=$(find /mnt/Windows/Windows/System32/DriverStore/FileRepository -name qcremotefs8150.inf_arm64_*)/bootmodem_fs1 bs=8388608</string>
</resources>