<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolboxtab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_inverseOnSurface"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarlayout"
            layout="@layout/toolbar" />

        <LinearLayout
            android:id="@+id/app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/content_padding"
            android:paddingBottom="@dimen/content_padding">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/appRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.woa.helper.main.Button
                        android:id="@+id/sta"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/android"
                        app:subtitle="@string/sta_subtitle"
                        app:title="@string/sta_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/flash_uefi"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/ic_uefi"
                        app:subtitle="@string/flash_uefi_subtitle"
                        app:title="@string/flash_uefi_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/dbkp"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        android:visibility="gone"
                        app:image="@drawable/ic_uefi"
                        app:subtitle="@string/dbkp_subtitle"
                        app:title="@string/dbkp_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/dump_modem"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        android:visibility="gone"
                        app:image="@drawable/ic_modem"
                        app:subtitle="@string/dump_modem_subtitle"
                        app:title="@string/dump_modem_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/devcfg"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        android:visibility="gone"
                        app:image="@drawable/ic_uefi"
                        app:subtitle="@string/devcfg_subtitle"
                        app:title="@string/devcfg_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/software"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/ic_sensor"
                        app:subtitle="@string/software_subtitle"
                        app:title="@string/software_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/atlasos"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/ic_ar"
                        app:subtitle="@string/atlasos_subtitle"
                        app:title="@string/atlasos_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/usbhost"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/mnt"
                        app:subtitle="@string/usbhost_subtitle"
                        app:title="@string/usbhost_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/rotation"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/ic_disk"
                        app:subtitle="@string/rotation_subtitle"
                        app:title="@string/rotation_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/tablet"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/ic_sensor"
                        app:subtitle="@string/tablet_subtitle"
                        app:title="@string/tablet_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/setup"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/mnt"
                        app:subtitle="@string/setup_subtitle"
                        app:title="@string/setup_title" />

                    <com.woa.helper.main.Button
                        android:id="@+id/defender"
                        style="@style/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/toolbox_button_height"
                        app:image="@drawable/edge"
                        app:subtitle="@string/defender_subtitle"
                        app:title="@string/defender_title" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:realtimeBlurRadius="10dp"
        app:realtimeOverlayColor="#80000000" />
</FrameLayout>